--- a/style.css
+++ b/style.css
@@ -7,3 +7,7 @@ body{
     background-color: #AFAFAF;
     min-width: 300px;
 }
+/* .main-container{
+    background-color: red;
+    width : 100%;
+} */
